--- a/partials/footer.html
+++ b/partials/footer.html
@@ -7,13 +7,13 @@
 
     <nav aria-label="Footer">
       <ul class="footer-nav">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about_me.html">About Me</a></li>
-        <li><a href="research_publication.html">Research & Publications</a></li>
-        <li><a href="programs.html">Programs</a></li>
-        <li><a href="media.html">Media & Advocate</a></li>
-        <li><a href="invited_speaking.html">Invited Speaking</a></li>
-        <li><a href="connect.html">Connect</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about_me">About Me</a></li>
+        <li><a href="/research_publication">Research & Publications</a></li>
+        <li><a href="/programs">Programs</a></li>
+        <li><a href="/media">Media & Advocate</a></li>
+        <li><a href="/invited_speaking">Invited Speaking</a></li>
+        <li><a href="/connect">Connect</a></li>
       </ul>
     </nav>
   </div>
