--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="container header-inner">
-    <a class="brand" href="home.html">
+    <a class="brand" href="/">
       <img class="brand-mark" src="assets/logo-mark.svg" alt="Dr Elaine mark" onerror="this.style.display='none'" />
       <span class="brand-text">Dr Elaine Loo</span>
     </a>
@@ -10,13 +10,13 @@
     </button>
     <nav>
       <ul id="navList" class="nav-list">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about_me.html">About Me</a></li>
-        <li><a href="research_publication.html">Research & Publications</a></li>
-        <li><a href="programs.html">Programs</a></li>
-        <li><a href="media.html">Media & Advocate</a></li>
-        <li><a href="invited_speaking.html">Invited Speaking</a></li>
-        <li><a href="connect.html">Connect</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about_me">About Me</a></li>
+        <li><a href="/research_publication">Research & Publications</a></li>
+        <li><a href="/programs">Programs</a></li>
+        <li><a href="/media">Media & Advocate</a></li>
+        <li><a href="/invited_speaking">Invited Speaking</a></li>
+        <li><a href="/connect">Connect</a></li>
       </ul>
     </nav>
   </div>
